--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 
                                 <button type="button" class="btn btn-success" onclick="btnApiFetch()" id="btnApiFetch">Mostar información</button>
                                 <div>
-                                <button type="button" class="btn btn-danger" onclick="btnReset()" id="btnReset">Quitar información</button>
+                                <button type="button" class="btn btn-danger" onclick="btnReset()" id="btnReset">Borrar información</button>
                             </div>
                               </div>
 
